add namespace create delete test

--- a/.github/workflows/py_lint.yml
+++ b/.github/workflows/py_lint.yml
@@ -14,4 +14,4 @@ jobs:
       - name: install pylint
         run: pip3 install pylint
       - name: pylint
-        run: pylint --rcfile=.pylintrc .
+        run: pylint --rcfile=.pylintrc pulsar_admin
