--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,6 @@
 [MASTER]
 ignore=static,.git
 [MESSAGES CONTROL]
-disable=invalid-name
+disable=invalid-name,missing-module-docstring,missing-class-docstring,missing-function-docstring,raise-missing-from,too-many-instance-attributes,too-few-public-methods
+[FORMAT]
+max-line-length=120
